unused templates removed

--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -8,12 +8,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="manifest" href="{% static 'boilerplate/site.webmanifest' %}">
-        <link rel="apple-touch-icon" href="{% static 'boilerplate/icon.png' %}">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="{% static 'boilerplate/css/normalize.css' %}">
-        <link rel="stylesheet" href="{% static 'boilerplate/css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'orders/normalize.css' %}">
+        <link rel="stylesheet" href="{% static 'orders/main.css' %}">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -22,6 +20,6 @@
 
         <!-- Add your site or application content here -->
         {% block content %}{% endblock %}
-        
+
     </body>
 </html>
