manager account page updated; url routing updated

--- a/orders/templates/orders/login.html
+++ b/orders/templates/orders/login.html
@@ -28,9 +28,9 @@
     </table>
     <br>
     <input type="submit" value="登录" />
-    
-        <input type="hidden" name="next" value="{% if next %}{{ next }}{% else %}{% url 'profile' %}{% endif %}" />
 
-    
+        <input type="hidden" name="next" value="{% if next %}{{ next }}{% else %}{% url 'index' %}{% endif %}" />
+
+
 </form>
 {% endblock %}
