--- a/orders/templates/orders/profile_view_all.html
+++ b/orders/templates/orders/profile_view_all.html
@@ -4,5 +4,6 @@
 
 <p><a href="{% url 'all_payment_history' %}"> 查看所有付款记录 </a></p>
 <p><a href="{% url 'all_order_history' %}"> 查看所有订单记录 </a></p>
+<p><a href="{% url 'all_clients' %}"> 查看所有客户信息 </a></p>
 
 {% endblock %}
