--- a/orders/templates/orders/all_order_history.html
+++ b/orders/templates/orders/all_order_history.html
@@ -6,7 +6,7 @@
     {% for order in order_list %}
         <li style="margin-top: 0.7em">
             <a href="{% url 'order_detail' order.id%}">{{ order.date | date:"c" }}，{{order.client.name}}：￥{{ order.final_CNY }}</a>
-            <br>{{ order.comment }}
+            <br>{{ order.get_item_list }}
         </li>
     {% endfor %}
     </ul>
