--- a/orders/templates/orders/order_history.html
+++ b/orders/templates/orders/order_history.html
@@ -1,12 +1,26 @@
 {% extends "index.html" %}
 {% block content %}
-<h1>订单记录</h1>
+<h1>
+    {% if client_name == "all" %}
+        所有订单记录
+    {% else %}
+        订单记录{% if is_manager %}：{{client_name}}{% endif %}
+    {% endif %}
+</h1>
 {% if order_list %}
     <ul>
     {% for order in order_list %}
         <li style="margin-top: 0.7em">
-            <a href="{% url 'order_detail' order.id%}">{{ order.date | date:"c" }}：￥{{ order.final_CNY }}</a>
-            <br>{{ order.get_item_list }}
+            <p>
+                <a href="{% url 'order_detail' order.id%}">
+                    {{ order.date | date:"c" }}
+                    {% if client_name == "all" %}
+                        ，{{order.client.name}}
+                    {% endif %}
+                </a>
+                ：￥{{ order.final_CNY }}
+                <br>{{ order.get_item_list }}
+            </p>
         </li>
     {% endfor %}
     </ul>
