--- a/orders/templates/orders/login.html
+++ b/orders/templates/orders/login.html
@@ -31,5 +31,5 @@
     <input type="hidden" name="next" value="{% if next %}{{ next }}{% else %}{% url 'index' %}{% endif %}" />
 </form>
 <p>提示：用户名为中文姓名，初始密码为小写姓名首字母+身份证后六位</p>
-<p>例：李狗蛋&nbsp;&nbsp;lgd234567</p>
+<p>例：张三&nbsp;&nbsp;zs123456</p>
 {% endblock %}
